Add simple tests